--- a/app/views/contact_books/_contactBook_contents_index.haml
+++ b/app/views/contact_books/_contactBook_contents_index.haml
@@ -1,17 +1,6 @@
 .infoArea
-  .infoArea__infoHead
-    .infoArea__infoHead__userRoom
-      %h6 選択中のクラス
-      .infoArea__infoHead__userRoom__roomName
-        = @room.number
-    .infoArea__infoHead__headBox
-      %ul.headBtns
-        %li.headBtn
-          = link_to '欠席連絡', room_absent_contacts_path, class: "HeadBtn abscentContact"
-        %li.headBtn
-          = link_to '連絡帳', room_contact_books_path, class: "HeadBtn contactBook"
-        %li.headBtn
-          = link_to '配布手紙', room_letters_path, class: "HeadBtn letters"
+  =render 'contact_books/headButtonLinks'
+
   .infoArea__infoMenu
     %ul.breadCrumbsLink
       %li
@@ -48,6 +37,7 @@
     .infoArea__infoContent__historyContactBookTitle
       過去の連絡帳      
     .infoArea__infoContent__historyContactBookBox
+    - if current_user && current_user.admin?
       -@everymonth.each do |month|
         - if month[1].present?
           .infoArea__infoContent__historyContactBookBox__title
