--- a/app/assets/stylesheets/modules/_absent_contacts.scss
+++ b/app/assets/stylesheets/modules/_absent_contacts.scss
@@ -100,6 +100,8 @@
 
 
 .infoArea {
+  overflow: hidden;
+  overflow: scroll;
   &__AbsentContact {
     &__contactsHistory {
       padding: 40px 40px;
