--- a/app/assets/stylesheets/modules/_contact_books.scss
+++ b/app/assets/stylesheets/modules/_contact_books.scss
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-  height:100%;
+  height: 100%;
   min-width: 1400px;
 }
 
@@ -140,10 +140,10 @@ footer {
 
   .infoArea {
     display: inline-block;
-    overflow: hidden;
-    overflow-x: scroll;
     width: calc( 100% - 150px );
     background-color: ivory;
+    overflow: hidden;
+    overflow: scroll;
     &__infoHead {
       height:80px;
       border-bottom: 2px groove orange;
