--- a/app/assets/stylesheets/modules/_letters.scss
+++ b/app/assets/stylesheets/modules/_letters.scss
@@ -49,6 +49,7 @@
     flex-direction: column;
     .Letter {
       margin: 20px;
+      text-align: right;
       .letterFile {
         font-size: 25px;
         color: black;
