view changed: string to value of t_checked

--- a/app/assets/stylesheets/modules/_absent_contacts.scss
+++ b/app/assets/stylesheets/modules/_absent_contacts.scss
@@ -65,12 +65,12 @@
     }
     .contact_T_Confirm {
       @extend .contactKind;
-      .not-confirm-btn {
+      .teacher-not-confirm-btn {
         color: red;
         cursor: pointer;
         display: inline-block;
       }
-      .not-confirm-btn:hover {
+      .teacher-not-confirm-btn:hover {
         color: black;
       }
     }
