--- a/app/views/absent_contacts/_AbsentContactBox.html.haml
+++ b/app/views/absent_contacts/_AbsentContactBox.html.haml
@@ -13,10 +13,11 @@
     済
   .contact_T_Confirm
     - if current_user && !current_user.admin?
-      未確認
+      .parent-confirm-button
+        = absentcontact.t_checked
     - else 
-      .not-confirm-btn
-        未確認
+      .teacher-not-confirm-btn
+        = absentcontact.t_checked
   - if current_user && !current_user.admin?
     .contact_edit_delete_btn
       = link_to edit_room_absent_contact_path(@room, absentcontact), class: "EditBtn" do
