--- a/app/views/absent_contacts/_AbsentContactBox.html.haml
+++ b/app/views/absent_contacts/_AbsentContactBox.html.haml
@@ -14,14 +14,27 @@
   .contact_T_Confirm
     - if current_user && !current_user.admin?
       .parent-confirm-button
-        = t("activerecord.attributes.absent_contact.t_checked.#{absentcontact.t_checked}")
+        - if absentcontact.t_checked == true
+          確認済
+        - else
+          未確認
     - else 
       .teacher-not-confirm-btn
-        = t("activerecord.attributes.absent_contact.t_checked.#{absentcontact.t_checked}")
+        = form_with url: absent_contact_t_checked_room_absent_contacts_path(@room, absentcontact), method: :patch, local: true do |f|
+          = f.check_box  :t_checked, { checked: true }, { class: "t_checked" }
+          = f.submit '確認'
+        - if absentcontact.t_checked == true
+          Status: 確認済
+        - else
+          未確認
   - if current_user && !current_user.admin?
     .contact_edit_delete_btn
       = link_to edit_room_absent_contact_path(@room, absentcontact), class: "EditBtn" do
         %i.fas.fa-file-signature
       = link_to room_absent_contact_path(@room, absentcontact), method: :delete, class: "DeleteBtn" do
         %i.fas.fa-trash-alt
+
+
+
+-# = t("activerecord.attributes.absent_contact.t_checked.#{absentcontact.t_checked}")
 
