--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,5 +3,6 @@
 @import "font-awesome";
 @import "modules/contact_books";
 @import "modules/letters";
-@import "modules/_absent_contacts";
-@import "modules/_devise";
+@import "modules/absent_contacts";
+@import "modules/devise";
+@import "modules/flash";
