refactoring controller for contact_book done

--- a/app/assets/stylesheets/modules/_contact_books.scss
+++ b/app/assets/stylesheets/modules/_contact_books.scss
@@ -296,6 +296,7 @@ footer {
                   border-bottom: 2px solid black;
                 }
                 .contact_edit_delete_btn {
+                  display: inline-block;
                   line-height: 26px;
                   margin-right:20px;
                   .EditBtn,
