--- a/app/views/contact_books/_contactBook_contents_index.haml
+++ b/app/views/contact_books/_contactBook_contents_index.haml
@@ -25,24 +25,34 @@
         - else
           =render partial: "today_contact_book", collection: @today_contact_book
 
-    .infoArea__infoContent__historyContactBookTitle
-      過去の連絡帳      
-    .infoArea__infoContent__historyContactBookBox
+
     - if current_user && current_user.admin?
-      -@everymonth.each do |month|
-        - if month[1].present?
-          .infoArea__infoContent__historyContactBookBox__title
-            = month[0]
-          .infoArea__infoContent__historyContactBookBox__Index
-            %ul.cbs
-              -month[1].each do |m|
-                %li.cb
-                  = link_to room_contact_book_path(@room, m),class: "cbLink" do
-                    = m.set_date
-                %li.cb
-                  - if current_user && current_user.admin?
-                    .contact_edit_delete_btn
-                      = link_to edit_room_contact_book_path(@room, m), class: "EditBtn" do
-                        %i.fas.fa-file-signature
-                      = link_to room_contact_book_path(@room, m), method: :delete, class: "DeleteBtn" do
-                        %i.fas.fa-trash-alt
+      .infoArea__infoContent__historyContactBookTitle
+        今日以外の連絡帳      
+      .infoArea__infoContent__historyContactBookBox
+        .infoArea__infoContent__historyContactBookBox__Index
+          %ul.cbs
+            - @all_contact_books.each do |m|
+              %li.cb
+                = link_to room_contact_book_path(@room, m),class: "cbLink" do
+                  = m.set_date
+              %li.cb
+                .contact_edit_delete_btn
+                  = link_to edit_room_contact_book_path(@room, m), class: "EditBtn" do
+                    %i.fas.fa-file-signature
+                  = link_to room_contact_book_path(@room, m), method: :delete, class: "DeleteBtn" do
+                    %i.fas.fa-trash-alt
+    -else
+      .infoArea__infoContent__historyContactBookTitle
+        過去の連絡帳      
+      .infoArea__infoContent__historyContactBookBox
+        -@everymonth.each do |month|
+          - if month[1].present?
+            .infoArea__infoContent__historyContactBookBox__title
+              = month[0]
+            .infoArea__infoContent__historyContactBookBox__Index
+              %ul.cbs
+                -month[1].each do |m|
+                  %li.cb
+                    = link_to room_contact_book_path(@room, m),class: "cbLink" do
+                      = m.set_date
