--- a/app/assets/stylesheets/modules/_contact_books.scss
+++ b/app/assets/stylesheets/modules/_contact_books.scss
@@ -123,18 +123,50 @@ footer {
       padding: 10px 0;
       overflow: hidden;
       overflow-y: scroll;
-      li {
-        height: 50px;
-        text-align: center;
-        line-height: 50px;
-        .roomNumberLink {
-          color: black;
-          text-decoration: none;
-        }
-        .roomNumberLink:hover {
-          text-decoration: underline;
+      .RoomIndex {
+        padding: 10px 0;
+        ul {
+          display: flex;
+          justify-content: center;
+          margin: 15px 0;
+          li {
+            display: inline-block;
+            height: 50px;
+            text-align: center;
+            line-height: 50px;
+            .roomNumberLink {
+              color: black;
+              text-decoration: none;
+              font-size: 23px;
+            }
+            .roomNumberLink:hover {
+              text-decoration: underline;
+            }
+          }
+          .noticeImage {
+            position: relative;
+            .far.fa-paper-plane {
+              font-size: 20px;
+            }
+            .yet_notice_count {
+              color: #fff;
+              font-size: 3px;
+              background-color:#f00;
+              padding: 0;
+              margin: 0;
+              width: 18px;
+              height: 18px;
+              line-height: 18px;
+              text-align: center;
+              border-radius: 50%;
+              position: absolute;
+              left: 16px;
+              top: -10px;
+            }
+          }
         }
       }
+      
     }
   }
 
