small view revised

--- a/app/assets/stylesheets/modules/_absent_contacts.scss
+++ b/app/assets/stylesheets/modules/_absent_contacts.scss
@@ -65,7 +65,8 @@
     }
     .contact_T_Confirm {
       @extend .contactDate;
-      .teacher-confirm-btn {
+      .teacher-confirm-btn,
+      .parent-confirm {
         color: black;
         text-align: center;
         margin-bottom: 5px;
