--- a/app/views/absent_contacts/_AbsentContactBox.html.haml
+++ b/app/views/absent_contacts/_AbsentContactBox.html.haml
@@ -13,7 +13,7 @@
     済
   .contact_T_Confirm
     - if current_user && !current_user.admin?
-      .parent-confirm-button
+      .parent-confirm
         - if absentcontact.t_checked == true
           確認済
         - else
