--- a/app/assets/stylesheets/modules/_devise.scss
+++ b/app/assets/stylesheets/modules/_devise.scss
@@ -15,6 +15,11 @@
     border: 4px solid lightgreen;
     .field {
       margin: 20px 0;
+      #user_school_id {
+        height: 30px;
+        width: 190px;
+        font-size: 14px;
+      }
     }
     .actions {
       margin-bottom: 30px;
