--- a/app/views/schools/registrations/new.html.haml
+++ b/app/views/schools/registrations/new.html.haml
@@ -1,31 +1,32 @@
 .wrapper  
-  .SchoolSignUp
-    %h2 Sign up
-    = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-      = render "schools/shared/error_messages", resource: resource
-      .field
-        = f.label :school_name
-        %br/
-        = f.text_field :school_name, autofocus: true, autocomplete: "school_name"
-      .field
-        = f.label :school_admin
-        %br/
-        = f.text_field :school_admin, autofocus: true, autocomplete: "school_admin"
-      .field
-        = f.label :email
-        %br/
-        = f.email_field :email, autofocus: true, autocomplete: "email"
-      .field
-        = f.label :password
-        - if @minimum_password_length
-          %em
-            (#{@minimum_password_length} characters minimum)
-        %br/
-        = f.password_field :password, autocomplete: "new-password"
-      .field
-        = f.label :password_confirmation
-        %br/
-        = f.password_field :password_confirmation, autocomplete: "new-password"
-      .actions
-        = f.submit "Sign up"
-    = render "schools/shared/links"
+  .wall
+    .FormBox
+      %h2 学校登録画面
+      = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+        = render "schools/shared/error_messages", resource: resource
+        .field
+          = f.label :学校名
+          %br/
+          = f.text_field :school_name, autofocus: true, autocomplete: "school_name"
+        .field
+          = f.label :管理代表者名
+          %br/
+          = f.text_field :school_admin, autofocus: true, autocomplete: "school_admin"
+        .field
+          = f.label :メールアドレス
+          %br/
+          = f.email_field :email, autofocus: true, autocomplete: "email"
+        .field
+          = f.label :パスワード
+          - if @minimum_password_length
+            %em
+              (#{@minimum_password_length} characters minimum)
+          %br/
+          = f.password_field :password, autocomplete: "new-password"
+        .field
+          = f.label :パスワード（確認用）
+          %br/
+          = f.password_field :password_confirmation, autocomplete: "new-password"
+        .actions
+          = f.submit "登録する"
+      = render "schools/shared/links"
