--- a/app/views/rooms/_room_contents_show.html.haml
+++ b/app/views/rooms/_room_contents_show.html.haml
@@ -1,5 +1,9 @@
 .infoArea
   .infoArea__infoHead
+    .infoArea__infoHead__userschool
+      %h6 学校名
+      .infoArea__infoHead__userschool__schoolName
+        = current_user.school.school_name
     .infoArea__infoHead__userRoom
       %h6 選択中のクラス
       .infoArea__infoHead__userRoom__roomName
