name and route changed: users#index to school#room_control

--- a/app/views/schools/index.html.haml
+++ b/app/views/schools/index.html.haml
@@ -32,6 +32,6 @@
             .LinkBox
               先生登録
         %li
-          = link_to users_path, class: "schoolFunction" do
+          = link_to room_control_schools_path, class: "schoolFunction" do
             .LinkBox
               ユーザー管理
