room-control-making

--- a/app/views/rooms/end.html.haml
+++ b/app/views/rooms/end.html.haml
@@ -19,3 +19,9 @@
           %li
             クラスを登録します
   .MainNav
+    .MainNav__head
+      クラス登録 完了
+    %p.guideline-explanation
+      クラス登録は完了いたしました。
+      お疲れ様でした。
+    = link_to '機能選択へ戻る', schools_path
