--- a/app/views/schools/index.html.haml
+++ b/app/views/schools/index.html.haml
@@ -24,7 +24,7 @@
         機 能 選 択
       %ul.schoolFunctions
         %li
-          = link_to new_room_path, class: "schoolFunction" do
+          = link_to grade1_rooms_path, class: "schoolFunction" do
             .LinkBox
               教室作成
         %li
