all functions implemented

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,4 +6,5 @@
 @import "modules/absent_contacts";
 @import "modules/devise";
 @import "modules/flash";
-@import "modules/school";
+@import "modules/schools";
+@import "modules/rooms";
