--- a/app/views/schools/index.html.haml
+++ b/app/views/schools/index.html.haml
@@ -24,14 +24,14 @@
         機 能 選 択
       %ul.schoolFunctions
         %li
-          = link_to grade1_rooms_path, class: "schoolFunction" do
+          = link_to control_rooms_path, class: "schoolFunction" do
             .LinkBox
               教室作成
         %li
-          = link_to  new_user_registration_path, class: "schoolFunction" do
+          = link_to  users_registrations_new_teacher_path, class: "schoolFunction" do
             .LinkBox
               先生登録
         %li
-          = link_to room_control_schools_path, class: "schoolFunction" do
+          = link_to room_show_rooms_path, class: "schoolFunction" do
             .LinkBox
               ユーザー管理
