--- a/app/assets/stylesheets/modules/_contact_books.scss
+++ b/app/assets/stylesheets/modules/_contact_books.scss
@@ -4,12 +4,12 @@
 }
 
 html {
-  height:100%;
+  min-height:100%;
   width: 100%;
 }
 
 body {
-  height: 100%;
+  min-height: 100%;
   min-width: 1400px;
 }
 
