--- a/app/assets/stylesheets/modules/_devise.scss
+++ b/app/assets/stylesheets/modules/_devise.scss
@@ -1,7 +1,42 @@
+label {
+  font-size: 16px;
+}
+
+#user_school_id {
+  height: 50px;
+  width: 300px;
+  border: 2px solid #aaaaaa;
+  border-radius: 3px;
+  background-color: #fff;
+  padding-left: 5px;
+}
+
+#user_parent_name,
+#user_child_name,
+#user_email,
+#user_password,
+#user_password_confirmation {
+  height: 50px;
+  width: 300px;
+  border: 2px solid #aaaaaa;
+  border-radius: 3px;
+  background-color: #fff;
+  padding-left: 5px;
+}
+
+.submitBtn {
+  height: 40px;
+  width: 150px;
+  color: #fff;
+  border: 2px solid #cccccc;
+  border-radius: 3px;
+  background-color: #aaaaaa;
+  padding-left: 5px;
+}
+
 .wall {
-  padding-top: 30px;
-  background-color: ivory;
-  height: 100%;
+  padding: 30px 0;
+  background-color: lightgray;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -9,22 +44,20 @@
   .FormBox {
     width: 700px;
     padding: 30px 80px 10px 80px;
-    background-color: #fff;
+    background-color: #dddddd;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    border: 4px solid lightgreen;
+    p {
+      font-size: 25px;
+    }
     .field {
       margin: 20px 0;
-      #user_school_id {
-        height: 30px;
-        width: 190px;
-        font-size: 14px;
-      }
     }
     .actions {
-      margin-bottom: 30px;
+      text-align: center;
+      margin: 50px 0;
     }
   }
 }
